# opencv_c

./: .clang-format  CMakeLists.txt  README.md  commend.txt  formatter.sh  main.c
core/: improc.c  improc.h  mat.c  mat.h  stb_image.h  stb_image_write.h  utils.c  utils.h
